--- a/styles/app.css
+++ b/styles/app.css
@@ -129,7 +129,7 @@ button {
   min-height: 250px;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .movie-btn {
@@ -251,15 +251,25 @@ button {
   width: 72px;
 }
 
-.trendingPreview-movieList {
+.trendingPreview-movieList{
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
   height: 241px;
   padding-left: 24px;
-  padding-bottom: 16px;
+}
+.trendingPreview-movieList::-webkit-scrollbar {
+  width: 10px;    /* width of the entire scrollbar */
 }
 
+.trendingPreview-movieList::-webkit-scrollbar-track {
+  background: var(--purple-light-2);        /* color of the tracking area */
+}
+
+.trendingPreview-movieList::-webkit-scrollbar-thumb {
+  background-color: var(--purple-medium-1);    /* color of the scroll thumb */
+  border-radius: 20px;  
+}
 .trendingPreview-movieList .movie-container {
   display: inline-block;
   margin-right: 8px;
@@ -272,6 +282,7 @@ button {
   width: 150px;
   min-width: 150px;
   max-width: 150px;
+  padding-bottom: 10px;
 }
 
 
